--- a/ionic/course/index.html
+++ b/ionic/course/index.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div>
+            Este es una prueba de index
+        </div>
+    </body>
+</html>
