--- a/ionic/course/index.html
+++ b/ionic/course/index.html
@@ -10,5 +10,8 @@
         <div>
             Este es una prueba de index
         </div>
+        <div>
+            Este es un footer
+        </div>
     </body>
 </html>
